# crewai-meting

./: requirements.txt
.devcontainer/: devcontainer.json
.streamlit/: secrets.toml
ai_meeting_assistant/: README.md  all_code.py  pyproject.toml  requirements.txt  testapi.py  testgemini.py
ai_meeting_assistant/saved_chats/: 小學教室.json  怎麼逃漏稅.json  股票建議.json  補助案討論.json  逃漏稅囉.json
ai_meeting_assistant/src/ai_meeting_assistant/: app.py  crew.py  main.py  requirements.txt
ai_meeting_assistant/src/ai_meeting_assistant/config/: agents.yaml  tasks.yaml
ai_meeting_assistant/src/ai_meeting_assistant/tools/: web_search_tool.py
coderocord/: 20250704_1656_all_code.txt  20250704_2057_all_code.txt  20250704_2115_all_code.txt  20250708_2138_all_code.txt  20250711_2215_all_code.txt  20250717_1414_all_code.txt  20250717_1518_all_code.txt  20250717_1612_all_code.txt  20250717_1644_all_code.txt  20250717_2239_all_code.txt
